# x-link

./: Cargo.toml  README.md  secret  test.http
crates/client/: Cargo.toml
crates/client/src/: cli.rs  client.rs  deserialize.rs  error.rs  lib.rs  main.rs  message.rs  serialize.rs
crates/solana/: Cargo.toml
crates/solana/src/: client.rs  constants.rs  error.rs  fresh_hash.rs  lib.rs
crates/solana/src/backend/: jupiter.rs  mod.rs  trench.rs
crates/types/: Cargo.toml
crates/types/src/: account.rs
crates/utils/: Cargo.toml
crates/utils/src/: logging.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: cli.rs  keygen.rs  main.rs
src/: cli.rs  keygen.rs
