[workspace]
name = "x-link"
version = "0.1.0"
edition = "2021"
resolver = "2"

members = [ "crates/*" ]
[workspace.dependencies]
x-link-wallet = { path = "crates/wallet" }

# Cli
clap = { version = "4.5.28", features = ["derive"] }

# Solana stuff
solana-sdk = "2.2.0"
bip39 = "2.1.0"
sha2 = "0.10.8"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
