[workspace]
name = "x-link"
version = "0.1.0"
edition = "2021"
resolver = "2"

members = [ "crates/*" ]
[workspace.dependencies]
x-link-wallet = { path = "crates/wallet" }
x-link-client = { path = "crates/client" }
x-link-types = { path = "crates/types" }
x-link-utils = { path = "crates/utils" }
x-link-solana = { path = "crates/solana" }

thiserror = "2.0.11"
tokio = { version = "1.10.0", features = ["full"] }
dashmap = "6.1.0"

# Json
serde = "1.0.217"
serde_json = "1.0.138"

# Http
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.2"

http = "1.2.0"
hyper-util = { version = "0.1.10", features = [
    "client",
    "client-legacy",
    "http1",
] }

# Cli
clap = { version = "4.5.28", features = ["derive"] }
rpassword = "7.3.1"

# Solana stuff
solana-sdk = "2"
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client"}
bip39 = "2.1.0"
sha2 = "0.10.8"
bs58 = "0.5.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
