[package]
name = "x-link-client"
version = "0.1.0"
edition = "2021"

[dependencies]
x-link-types = { workspace = true }
x-link-wallet = { workspace = true }

# Cli
clap = { workspace = true, features = ["derive"] }

# Async
tokio = { workspace = true, features = ["full"] }

# Http
http-body-util = { workspace = true}
hyper= { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}

# Solana stuff
solana-sdk = { workspace = true}
bip39 ={ workspace = true} 
sha2 ={ workspace = true} 
bs58 ={ workspace = true}

# Logging
tracing ={ workspace = true} 
tracing-subscriber = { workspace = true, features = ["env-filter"] }
