[package]
name = "x-link-client"
version = "0.1.0"
edition = "2021"

[dependencies]
x-link-types = { workspace = true }
x-link-wallet = { workspace = true }
x-link-utils = { workspace = true }
x-link-solana = { workspace = true }

thiserror = { workspace = true }

# Cli
clap = { workspace = true, features = ["derive"] }
rpassword = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }

# Http
http-body-util = { workspace = true}
hyper= { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
hyper-util = { workspace = true, features = [
    "client",
    "client-legacy",
    "http1",
] }


# Solana stuff
solana-sdk = { workspace = true}
bip39 ={ workspace = true} 
sha2 ={ workspace = true} 
bs58 ={ workspace = true}

# Logging
tracing ={ workspace = true} 
tracing-subscriber = { workspace = true, features = ["env-filter"] }
