[package]
name = "x-link-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }

x-link-types = { workspace = true }

# Solana stuff
solana-client = "2"
solana-sdk = { workspace = true }
jupiter-swap-api-client = {workspace = true }
dashmap = { workspace = true }

# Logging
tracing ={ workspace = true } 

