[package]
name = "x-link-types"
version = "0.1.0"
edition = "2021"

[dependencies]

# Json
serde = { workspace = true}
serde_json = { workspace = true}

# Solana stuff
solana-sdk = { workspace = true}
bip39 ={ workspace = true} 
sha2 ={ workspace = true} 
bs58 ={ workspace = true}

# Logging
tracing ={ workspace = true} 
tracing-subscriber = { workspace = true, features = ["env-filter"] }
