[package]
name = "x-link-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]

# Cli
clap = { workspace = true, features = ["derive"] }

# Solana stuff
solana-sdk = { workspace = true}
bip39 ={ workspace = true} 
sha2 ={ workspace = true} 

# Logging
tracing ={ workspace = true} 
tracing-subscriber = { workspace = true, features = ["env-filter"] }
